--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.20",
     "expo-status-bar": "~2.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-date-picker": "^5.0.8",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
