--- a/frontend/app.json
+++ b/frontend/app.json
@@ -13,13 +13,16 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kofki.timecapsuleapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.kofki.timecapsuleapp",
+      "googleServicesFile": "./google-service.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
