--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "react-native-date-picker": "^5.0.8",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "@react-native-community/datetimepicker": "8.2.0",
+    "expo-notifications": "~0.29.11",
+    "expo-device": "~7.0.1",
+    "expo-constants": "~17.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
