--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.20",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-notifications": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-date-picker": "^5.0.8",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "expo-notifications": "~0.29.11",
-    "expo-device": "~7.0.1",
-    "expo-constants": "~17.0.3"
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
