--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "expo": "~52.0.20",
     "expo-constants": "~17.0.3",
     "expo-device": "~7.0.1",
+    "expo-linear-gradient": "^14.0.1",
     "expo-notifications": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
